--- a/Serie2/webapp/views/home.hbs
+++ b/Serie2/webapp/views/home.hbs
@@ -1,10 +1,13 @@
 {{#if token.google}}
-    <div> Olá <b>{{token.google.email}}</b> </div>
+    <div> Olá </div>
+    <br>
 {{else}}
-    <a href=/login/google>Use Google Account</a>
+    <div><a href=/login/google>Use Google Account</a></div>
+    <br>
 {{/if}}
 
 {{#if token.github}}
+    <div>Repo:</div>
     <input type="text" id="repo">
     <a href="/issues?repo=" id="issues" onclick="getRepo()">Issues</a>
     <script>
